--- a/JAERO/gui_classes/settingsdialog.ui
+++ b/JAERO/gui_classes/settingsdialog.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>720</height>
+    <height>730</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -22,13 +22,13 @@
   <property name="minimumSize">
    <size>
     <width>480</width>
-    <height>720</height>
+    <height>730</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>480</width>
-    <height>720</height>
+    <height>730</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -79,7 +79,7 @@
          <x>10</x>
          <y>80</y>
          <width>431</width>
-         <height>91</height>
+         <height>151</height>
         </rect>
        </property>
        <property name="title">
@@ -89,7 +89,7 @@
         <property name="geometry">
          <rect>
           <x>20</x>
-          <y>30</y>
+          <y>90</y>
           <width>201</width>
           <height>19</height>
          </rect>
@@ -102,7 +102,7 @@
         <property name="geometry">
          <rect>
           <x>20</x>
-          <y>60</y>
+          <y>120</y>
           <width>301</width>
           <height>19</height>
          </rect>
@@ -111,12 +111,73 @@
          <string>Beep on multi line text message</string>
         </property>
        </widget>
+       <widget class="QComboBox" name="comboBoxoutputfmt">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>30</y>
+          <width>87</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <item>
+         <property name="text">
+          <string>1</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>3</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>JSON</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>JSONdump</string>
+         </property>
+        </item>
+       </widget>
+       <widget class="QLabel" name="label">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>30</y>
+          <width>101</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Output Format</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="checkBoxonlyuselibacars">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>60</y>
+          <width>301</width>
+          <height>19</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Only use libacars for ADS parsing</string>
+        </property>
+       </widget>
       </widget>
       <widget class="QGroupBox" name="groupBox_5">
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>440</y>
+         <y>480</y>
          <width>431</width>
          <height>151</height>
         </rect>
@@ -128,7 +189,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>20</y>
+          <y>30</y>
           <width>411</width>
           <height>22</height>
          </rect>
@@ -241,9 +302,9 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>280</y>
+         <y>340</y>
          <width>431</width>
-         <height>71</height>
+         <height>61</height>
         </rect>
        </property>
        <property name="title">
@@ -305,9 +366,9 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>360</y>
+         <y>410</y>
          <width>431</width>
-         <height>71</height>
+         <height>61</height>
         </rect>
        </property>
        <property name="title">
@@ -359,7 +420,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>180</y>
+         <y>240</y>
          <width>431</width>
          <height>91</height>
         </rect>
@@ -408,74 +469,17 @@
        </widget>
       </widget>
      </widget>
-     <widget class="QWidget" name="outputsettings">
+     <widget class="QWidget" name="feedersettings">
       <attribute name="title">
-       <string>Output</string>
+       <string>Feeder</string>
       </attribute>
-      <widget class="QGroupBox" name="groupBox_9">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>350</y>
-         <width>431</width>
-         <height>91</height>
-        </rect>
-       </property>
-       <property name="title">
-        <string>Options</string>
-       </property>
-       <widget class="QLineEdit" name="lineEditstationid">
-        <property name="geometry">
-         <rect>
-          <x>130</x>
-          <y>60</y>
-          <width>291</width>
-          <height>21</height>
-         </rect>
-        </property>
-        <property name="toolTip">
-         <string>you can output to multiple destinations
-by placing a space between destinations.
-eg &quot;localhost:12345 localhost:12346&quot;</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-       <widget class="QCheckBox" name="checkSetStationId">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>60</y>
-          <width>131</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Set station ID</string>
-        </property>
-       </widget>
-       <widget class="QCheckBox" name="checkBoxonlyuselibacars">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>30</y>
-          <width>301</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Only use libacars for ADS parsing</string>
-        </property>
-       </widget>
-      </widget>
       <widget class="QTableWidget" name="outputListTable">
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>40</y>
+         <y>80</y>
          <width>431</width>
-         <height>271</height>
+         <height>521</height>
         </rect>
        </property>
        <property name="focusPolicy">
@@ -514,9 +518,19 @@ eg &quot;localhost:12345 localhost:12346&quot;</string>
        <attribute name="verticalHeaderVisible">
         <bool>false</bool>
        </attribute>
+       <row>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </row>
+       <row>
+        <property name="text">
+         <string>1</string>
+        </property>
+       </row>
        <column>
         <property name="text">
-         <string> </string>
+         <string/>
         </property>
        </column>
        <column>
@@ -534,12 +548,42 @@ eg &quot;localhost:12345 localhost:12346&quot;</string>
          <string>Port</string>
         </property>
        </column>
+       <item row="0" column="1">
+        <property name="text">
+         <string>JSON</string>
+        </property>
+       </item>
+       <item row="0" column="2">
+        <property name="text">
+         <string>fake</string>
+        </property>
+       </item>
+       <item row="0" column="3">
+        <property name="text">
+         <string>1111</string>
+        </property>
+       </item>
+       <item row="1" column="1">
+        <property name="text">
+         <string>3</string>
+        </property>
+       </item>
+       <item row="1" column="2">
+        <property name="text">
+         <string>fake</string>
+        </property>
+       </item>
+       <item row="1" column="3">
+        <property name="text">
+         <string>2222</string>
+        </property>
+       </item>
       </widget>
       <widget class="QPushButton" name="newEntryButton">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>310</y>
+         <x>250</x>
+         <y>600</y>
          <width>61</width>
          <height>25</height>
         </rect>
@@ -551,8 +595,8 @@ eg &quot;localhost:12345 localhost:12346&quot;</string>
       <widget class="QPushButton" name="editEntryButton">
        <property name="geometry">
         <rect>
-         <x>70</x>
-         <y>310</y>
+         <x>310</x>
+         <y>600</y>
          <width>61</width>
          <height>25</height>
         </rect>
@@ -564,27 +608,14 @@ eg &quot;localhost:12345 localhost:12346&quot;</string>
       <widget class="QPushButton" name="removeEntryButton">
        <property name="geometry">
         <rect>
-         <x>130</x>
-         <y>310</y>
+         <x>370</x>
+         <y>600</y>
          <width>71</width>
          <height>25</height>
         </rect>
        </property>
        <property name="text">
         <string>Remove</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="setUiOutButton">
-       <property name="geometry">
-        <rect>
-         <x>340</x>
-         <y>310</y>
-         <width>101</width>
-         <height>25</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Set UI Output</string>
        </property>
       </widget>
       <widget class="QCheckBox" name="checkBoxenablefeeding">
@@ -598,6 +629,37 @@ eg &quot;localhost:12345 localhost:12346&quot;</string>
        </property>
        <property name="text">
         <string>Enable output feeding using UDP</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="checkSetStationId">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>40</y>
+         <width>131</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Set station ID</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEditstationid">
+       <property name="geometry">
+        <rect>
+         <x>130</x>
+         <y>40</y>
+         <width>291</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="toolTip">
+        <string>you can output to multiple destinations
+by placing a space between destinations.
+eg &quot;localhost:12345 localhost:12346&quot;</string>
+       </property>
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </widget>
