--- a/JAERO/gui_classes/settingsdialog.ui
+++ b/JAERO/gui_classes/settingsdialog.ui
@@ -116,7 +116,7 @@
          <rect>
           <x>130</x>
           <y>30</y>
-          <width>87</width>
+          <width>131</width>
           <height>21</height>
          </rect>
         </property>
@@ -530,11 +530,6 @@
        </row>
        <column>
         <property name="text">
-         <string/>
-        </property>
-       </column>
-       <column>
-        <property name="text">
          <string>Format</string>
         </property>
        </column>
@@ -548,32 +543,32 @@
          <string>Port</string>
         </property>
        </column>
-       <item row="0" column="1">
+       <item row="0" column="0">
         <property name="text">
          <string>JSON</string>
         </property>
        </item>
-       <item row="0" column="2">
+       <item row="0" column="1">
         <property name="text">
          <string>fake</string>
         </property>
        </item>
-       <item row="0" column="3">
+       <item row="0" column="2">
         <property name="text">
          <string>1111</string>
         </property>
        </item>
-       <item row="1" column="1">
+       <item row="1" column="0">
         <property name="text">
          <string>3</string>
         </property>
        </item>
-       <item row="1" column="2">
+       <item row="1" column="1">
         <property name="text">
          <string>fake</string>
         </property>
        </item>
-       <item row="1" column="3">
+       <item row="1" column="2">
         <property name="text">
          <string>2222</string>
         </property>
@@ -593,6 +588,9 @@
        </property>
       </widget>
       <widget class="QPushButton" name="editEntryButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="geometry">
         <rect>
          <x>310</x>
@@ -606,6 +604,9 @@
        </property>
       </widget>
       <widget class="QPushButton" name="removeEntryButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="geometry">
         <rect>
          <x>370</x>
